--- a/app/src/main/res/layout/activity_form_create.xml
+++ b/app/src/main/res/layout/activity_form_create.xml
@@ -5,41 +5,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".FormCreate">
-    <TextView
+    <EditText
         android:id="@+id/form_create_title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:text="hello~"
+        android:hint="输入项目名称"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:layout_weight="2"/>
     <android.support.v7.widget.CardView
         android:id="@+id/form_create_basic_info"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:minHeight="30dp"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
         app:cardBackgroundColor="@color/lightGray"
-        android:layout_margin="5dp"
-        android:layout_weight="3">
+        android:layout_margin="5dp">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/form_create_creator"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:text="@string/form_detail_creator"/>
             <TextView
                 android:id="@+id/form_create_status"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:text="@string/form_detail_status"/>
+            <EditText
+                android:id="@+id/order_num"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="输入单号"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
     <LinearLayout
@@ -65,6 +70,14 @@
             android:textAlignment="center"
             android:textStyle="bold"
             android:text="@string/form_detail_table_head_material_size"/>
+        <TextView
+            android:id="@+id/table_head_unit"
+            android:layout_weight="1.0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:text="单位"/>
         <TextView
             android:id="@+id/table_head_operation"
             android:layout_weight="1.0"
