--- a/app/src/main/res/layout/activity_form_detail.xml
+++ b/app/src/main/res/layout/activity_form_detail.xml
@@ -33,27 +33,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:orientation="vertical">
-                <!--<TextView-->
-                    <!--android:id="@+id/form_detail_creator"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginTop="5dp"-->
-                    <!--android:textSize="15dp"-->
-                    <!--android:text="@string/form_detail_creator"/>-->
-                <!--<TextView-->
-                    <!--android:id="@+id/form_detail_time"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginTop="5dp"-->
-                    <!--android:textSize="15dp"-->
-                    <!--android:text="@string/form_detail_time"/>-->
-                <!--<TextView-->
-                    <!--android:id="@+id/form_detail_status"-->
-                    <!--android:text="@string/form_detail_status"-->
-                    <!--android:layout_marginTop="5dp"-->
-                    <!--android:textSize="15dp"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
             </LinearLayout>
         </android.support.v7.widget.CardView>
         <LinearLayout
@@ -76,6 +55,14 @@
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:text="@string/form_detail_table_head_material_size"/>
+            <TextView
+                android:id="@+id/table_head_unit"
+                android:layout_weight="1.0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:text="单位"/>
             <TextView
                 android:id="@+id/table_head_operation"
                 android:layout_weight="1.0"
