--- a/app/src/main/res/layout/activity_form_list.xml
+++ b/app/src/main/res/layout/activity_form_list.xml
@@ -81,8 +81,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:layout_weight="1.0"
-                    android:text="@string/title"
+                    android:layout_weight="2"
+                    android:text="项目名称"
                     android:textAlignment="center"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -90,7 +90,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:layout_weight="1.0"
+                    android:layout_weight="1"
                     android:text="@string/form_detail_creator"
                     android:textAlignment="center"
                     android:textSize="20dp"
