--- a/app/src/main/res/layout/form_create_list_content.xml
+++ b/app/src/main/res/layout/form_create_list_content.xml
@@ -23,6 +23,12 @@
             android:textAlignment="center"
             android:layout_weight="3"></TextView>
         <TextView
+            android:id="@+id/form_create_list_content_unit"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:textAlignment="center"
+            android:layout_weight="1" />
+        <TextView
             android:id="@+id/form_create_list_content_show_number"
             android:layout_width="0dp"
             android:layout_height="match_parent"
